--- a/index.html
+++ b/index.html
@@ -17,11 +17,27 @@
         <span class="card-text">Tanmay Raj</span>
         <div class="socials">
             <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
-            <a href="#" target="_blank"><i class="fab fa-facebook"></i></a>
+            <a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a>
             <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
             <a href="https://github.com/Tanmayraj503?tab=repositories" target="_blank"><i class="fab fa-github"></i></a>
         </div>
     </div>
+
+    <div class="floating-btn">
+        <div class="social">
+            <a href="#" class="social-links"><i class="fab fa-facebook-f"></i></a>
+            <a href="#" class="social-links"><i class="fab fa-twitter"></i></a>
+            <a href="#" class="social-links"><i class="fab fa-instagram"></i></a>
+            <a href="https://github.com/Tanmayraj503?tab=repositories" class="social-links"><i
+                    class="fab fa-github"></i></a>
+        </div>
+
+        <button class="main-btn" id="toggle-btn">
+            <i class="fas fa-plus"></i>
+            <span class="tooltip">Connect with me</span>
+        </button>
+    </div>
+    <script src="script.js"></script>
 </body>
 
 </html>
